--- a/application/frontend/src/index.html
+++ b/application/frontend/src/index.html
@@ -4,7 +4,11 @@
   <meta charset="utf-8" />
   <meta
     name="viewport"
-    content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no shrink-to-fit=no"
+    content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no"
+  />
+  <meta
+    name="description"
+    content="Open CRE - Open Cybersecurity Requirement Expression: Link security requirements across standards and frameworks."
   />
   <title>Open CRE</title>
   <link rel="icon" type="image/svg+xml" href="/logo.svg" />
